# sex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.ci-container/: Dockerfile
.github/workflows/: build-ci-container.yml  development.yml
ci-container/: Dockerfile
cmake/: CompilerCheck.cmake  sanitizers.cmake
sex/: CMakeLists.txt  cgroup-controller.cpp  cgroup-controller.h  cgroup-controller.hpp  cgroup-init.cpp  cgroup_controller.cpp  cgroup_controller.hpp  container-init.cpp  container.cpp  container.h  container.hpp  execute.cpp  execute.hpp  fd-holder.cpp  fd-holder.h
sex/detail/: conditions.hpp  execute_args.cpp  execute_args.hpp  execute_hooks.cpp  execute_hooks.hpp  exit_status.cpp  exit_status.hpp  macros.hpp  process_knob.cpp  process_knob.hpp  routine.hpp  syscall.hpp  syscall_result.hpp
sex/util/: builder-helper.hpp  builder_helper.hpp  data_transfer.hpp  event_poller.hpp  execute_args.cpp  execute_args.hpp  execute_hooks.cpp  execute_hooks.hpp  exit_status.cpp  exit_status.hpp  fd-holder.cpp  fd_holder.cpp  fd_holder.hpp  file_descriptor.hpp  flock.hpp  macros.hpp  once.hpp  panic.cpp  panic.hpp  pipe.cpp  pipe.hpp  result.hpp  rlimit.hpp  source_location.cpp  source_location.hpp  syscall.hpp  timer_fd.hpp  unique_function.hpp
sex/util/mount/: bind.hpp  (+2 more)
tests/: CMakeLists.txt  container.cpp  event_poller.cpp  execute.cpp  flock.cpp  main.cpp  timer_fd.cpp
tests/common/: cpu_time_guard.hpp  time_print.cpp  time_print.hpp
tests/common/stopwatch/: basic_stopwatch.hpp  cpu_stopwatch.hpp  high_resolution_stopwatch.hpp
tests/mount/: bind.cpp
(+3 files in other folders)
